--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./views/tempature.html">
+                <a class="nav-link" href="views/tempature.html">
                   <span data-feather="tempature">
                     <i class="fas fa-temperature-high"></i>
                   </span>
@@ -77,7 +77,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./views/soilMoisture.html">
+                <a class="nav-link" href="views/soilMoisture.html">
                   <span data-feather="moisture">
                     <i class="fas fa-seedling"></i
                   ></span>
@@ -85,7 +85,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./views/humidity.html">
+                <a class="nav-link" href="views/humidity.html">
                   <span data-feather="hudiminity">
                     <i class="fas fa-tint"></i>
                   </span>
@@ -139,7 +139,7 @@
                         text-decoration: none;
                         color: white;
                       "
-                      href="tempature.html"
+                      href="/views/tempature.html"
                     >
                       <img
                         src="../asset/images/thermometer-temperature-svgrepo-com.svg"
@@ -164,7 +164,7 @@
                         text-decoration: none;
                         color: white;
                       "
-                      href="soilMoisture.html"
+                      href="/views/soilMoisture.html"
                     >
                       <img
                         src="../asset/images/soil-moisture-svgrepo-com.svg"
@@ -191,12 +191,12 @@
                         text-decoration: none;
                         color: white;
                       "
-                      href="humidity.html"
+                      href="/views/humidity.html"
                     >
                       <img
                         src="../asset/images/humidity_1.svg"
                         class="card-img-top"
-                        alt="Tempature"
+                        alt="humidity"
                       />
                       <div class="card-body">
                         <h5 class="card-title h5 my-4 text-center">Độ ẩm</h5>
