--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
         </main>
       </div>
     </div>
+    <footer>
+      <div class="text-center h5">
+        <div>Cao Nguyên Linh - 15141196</div>
+        <div>Từ Đức Lợi - 16141196</div>
+      </div>
+    </footer>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
