--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
       class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow"
     >
       <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">HCMUTE</a>
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
-        </li>
-      </ul>
     </nav>
 
     <div class="container-fluid">
@@ -108,8 +103,8 @@
               </div>
               <div class="col-lg-8 col-12">
                 <div class="text-center">
-                  <div class="h3">ĐỒ ÁN TỐT NGHIỆP</div>
-                  <div class="h5">
+                  <div class="h2">ĐỒ ÁN TỐT NGHIỆP</div>
+                  <div class="h4">
                     ĐỀ TÀI: "THIẾT KẾ HỆ THỐNG GIÁM SÁT NÔNG NGHIỆP DÙNG CÔNG
                     NGHỆ IOT THÔNG QUA MẠNG ZIGBEE"
                   </div>
@@ -124,7 +119,7 @@
                 />
               </div>
             </div>
-            <div class="row my-2">
+            <div class="row my-4 py-5">
               <div class="col-sm-12 col-md-12 col-lg-10">
                 <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
                   <div class="col mb-4">
@@ -212,13 +207,13 @@
                   <div class="mr-2 font-weight-bold">Tự động</div>
                   <div class="font-weight-bold">Bằng tay</div>
                 </div>
-                <label class="switch">
+                <label class="switchType">
                   <input
                     type="checkbox"
                     onchange="mode(this)"
                     id="CHẾ ĐỘ HOẠT ĐỘNG"
                   />
-                  <span class="slider"></span>
+                  <span class="sliderType"></span>
                 </label>
                 <div>
                   <div class="h6">Trạng thái đèn</div>
@@ -273,9 +268,25 @@
       </div>
     </div>
     <footer>
-      <div class="text-center h5">
-        <div>Cao Nguyên Linh - 15141196</div>
-        <div>Từ Đức Lợi - 16141196</div>
+      <div class="d-flex h5 align-items-center justify-content-center">
+        <div>
+          <div>GVHD: ThS. Lê Minh Thành</div>
+          <div>
+            SVTH:
+            <div class="d-flex flex-column">
+              <div class="ml-5">
+                <div class="d-flex justify-content-between">
+                  <div>Từ Đức Lợi</div>
+                  <div class="ml-2">- 16141196</div>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <div>Cao Nguyên Linh</div>
+                  <div class="ml-2">- 15141196</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
     <script
