--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                   <input
                     type="checkbox"
                     onchange="mode(this)"
-                    id="CHẾ ĐỘ HOẠT ĐỘNG"
+                    id="chedo"
                   />
                   <span class="sliderType"></span>
                 </label>
