--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleCheckbox(this)"
+                        onchange="toggleLight(this)"
                         id="TRẠNG THÁI ĐÈN"
                       />
                       <span class="slider round"></span>
@@ -232,7 +232,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleCheckbox(this)"
+                        onchange="toggleFan(this)"
                         id="TRẠNG THÁI QUẠT"
                       />
                       <span class="slider round"></span>
@@ -243,7 +243,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleCheckbox(this)"
+                        onchange="togglePump(this)"
                         id="TRẠNG THÁI MÁY BƠM"
                       />
                       <span class="slider round"></span>
@@ -254,7 +254,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleCheckbox(this)"
+                        onchange="toggleMist(this)"
                         id="TRẠNG THÁI PHUN SƯƠNG"
                       />
                       <span class="slider round"></span>
