Update: Hot fix

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <label class="switchType">
                   <input
                     type="checkbox"
-                    onchange="mode(this)"
+                    onclick="mode(this)"
                     id="chedo"
                   />
                   <span class="sliderType"></span>
@@ -221,7 +221,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleLight(this)"
+                        onclick="toggleLight(this)"
                         id="TRẠNG THÁI ĐÈN"
                       />
                       <span class="slider round"></span>
@@ -232,7 +232,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleFan(this)"
+                        onclick="toggleFan(this)"
                         id="TRẠNG THÁI QUẠT"
                       />
                       <span class="slider round"></span>
@@ -243,7 +243,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="togglePump(this)"
+                        onclick="togglePump(this)"
                         id="TRẠNG THÁI MÁY BƠM"
                       />
                       <span class="slider round"></span>
@@ -254,7 +254,7 @@
                     <label class="switch">
                       <input
                         type="checkbox"
-                        onchange="toggleMist(this)"
+                        onclick="toggleMist(this)"
                         id="TRẠNG THÁI PHUN SƯƠNG"
                       />
                       <span class="slider round"></span>
